--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 <div class="col-5">
                     <div class="card">
                         <div class="card-body">
-                            <form id="task-form">
+                            <form id="formulario">
                                 <div class="form-group p-2">
                                     <input type="text" class="form-control" id="name" placeholder="Nombre">
                                 </div>
                                 <div class="form-group p-2">
-                                    <textarea class="form-control" placeholder="ingrese una descripcion"id="desciption" cols="30" rows="10"></textarea>
+                                    <textarea class="form-control" placeholder="ingrese una descripcion"id="description" cols="30" rows="10"></textarea>
                                     
                                   </div>
                                 <div class="d-grid gap-2 mx-auto p-2">
@@ -89,7 +89,7 @@
                                 <th>Descripción</th>
                             </tr>
                         </thead>
-                        <tbody id="tasks">
+                        <tbody id="bodytabla">
 
                         </tbody>
                     </table>
