--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
 
 
                     <table class="table table-bordered table-sm">
-                        <thead class="table-dark">
+                        <thead class="table-dark text-center">
                             <tr>
                                 <th>ID</th>
                                 <th>nombre</th>
                                 <th>Descripción</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody id="bodytabla">
